--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <title>Enlazados Music</title>
+    <style>
+        body {
+            font-family: 'Noto Sans JP', sans-serif;
+        }
+    </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GFYNK0647"></script>
     <script>
@@ -25,13 +35,83 @@
 </head>
 
 <body>
-    <h1 id="title">Enlazados Music</h1>
+    <div class="container-fluid principal">
+        <div class="row fixed-top">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Bibliografia</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#">Albums en spotify</a>
+                            </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                        </form>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="row" style="position: relative; top:14vh">
+            <div class="animate__animated animate__fadeIn animate__delay-1s col-12">
+                <h1 id="title">Enlazados Music</h1>
+            </div>
+        </div>
+        <div class="row animate__animated animate__fadeIn animate__delay-2s" style="position: relative; top:14vh">
+            <div class="col-2">
+
+            </div>
+            <div class="col-8 justify-img mt-4">
+                <img src="./img/lucecitas.jpeg" alt="album lucecitas" srcset="">
+            </div>
+            <div class="col-2 img-contact justify">
+                <div style="margin:0 auto 0 auto">
+                    <span class="container-img">
+                        <i class="fab fa-facebook-square"></i>
+                    </span>
+                    <span class="container-img">
+                        <i class="fab fa-instagram"></i>
+                    </span>
+                    <span class="container-img">
+                        <i class="fab fa-youtube"></i>
+                    </span>
+                    <span class="container-img">
+                        <i class="fab fa-whatsapp"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fuid info">
+        <h2>
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto neque, assumenda labore suscipit, sed optio aspernatur reprehenderit similique vel veniam pariatur ipsum nam architecto consequuntur harum qui voluptates ut dignissimos?"
+        </h2>
+    </div>
+    <div class="container-fuid discografia">
+
+    </div>
+    <div class="container-fuid contacto">
+
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </body>
 
 </html>
